# graph-enumeration

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker_command.txt  folder_tree.txt  wait_and_run.sh
.cargo/: config.toml
src/: check_statement.rs  lib.rs  main.rs
