[package]
name = "graph-enumeration"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.17.11"
itertools = "0.14.0"
nalgebra = "0.33.2"
petgraph = "0.6.5"
rand = "0.8"  
rand_distr = "0.4" 
serde = { version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
wl_isomorphism = "0.1.1"
