[package]
name = "graph-enumeration"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
graph-canon = "0.1.4"
graph6 = "2.0.1"
indicatif = "0.17.11"
itertools = "0.14.0"
nalgebra = "0.33.2"
petgraph = "0.6.5"
rand = "0.8"  
rand_distr = "0.4" 
rayon = "1.11.0"
serde = { version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
walkdir = "2.5.0"
wl_isomorphism = "0.1.1"

[profile.release]
opt-level = 3         # 既定値だが明示
lto = "fat"          # さらに詰めたいなら "fat"（ビルドは遅くなるが実行は速い）
codegen-units = 1     # 実行速度優先（ビルドは遅くなる）
panic = "abort"       # パニック時の展開コスト削減
strip = "symbols"     # バイナリを軽量化（Rust 1.80+）

[build]
rustflags = ["-C", "target-cpu=native"]
